add rules projectfiltertranspose and joinpushtransitivepredicates